--- a/proposal/model.tex
+++ b/proposal/model.tex
@@ -6,6 +6,6 @@ The graphical model formulation of our approach is shown in figure \ref{fig:mode
 %\fbox{\rule[-.5cm]{0cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
  \includegraphics[width=0.5\linewidth]{fig/model} 
 \end{center}
-\caption{Graphical Model Formulation.}
+\caption{Graphical Model Formulation}
 \label{fig:model}
 \end{figure}
