--- a/proposal/cs242_slam.bib
+++ b/proposal/cs242_slam.bib
@@ -47,3 +47,11 @@
   organization={IEEE}
 }
 
+@inproceedings{g2o,
+  title={g2o: A general framework for graph optimization},
+  author={Kummerle, Rainer and Grisetti, Giorgio and Strasdat, Hauke and Konolige, Kurt and Burgard, Wolfram},
+  booktitle={Robotics and Automation (ICRA), 2011 IEEE International Conference on},
+  pages={3607--3613},
+  year={2011},
+  organization={IEEE}
+}
