--- a/proposal/model.tex
+++ b/proposal/model.tex
@@ -1,3 +1,13 @@
+\begin{wrapfigure}{r}{0.25\textwidth}
+\begin{center}
+%\framebox[4.0in]{$\;$}
+%\fbox{\rule[-.5cm]{0cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
+ \includegraphics[width=0.22\textwidth]{fig/model} 
+\end{center}
+\caption{Graphical Model Formulation}
+\label{fig:model}
+\end{wrapfigure}
+
 \section{Graphical Model Formulation}
 Following \cite{isam} we formulate the SLAM problem in graphical models in figure \ref{fig:model}. Specifically, the robot states are denoted by $X = \{x_i\}$ with $i \in 0, \dots T$, the landmarks by $L = \{l_j\}$ with $j \in 1,\dots, N$, the control inputs by $U = \{u_i\}$ for $i \in 1,\dots, T$ and the landmard measurements by $Z = \{z_k\}$ with $k \in 1, \dots, K$. In addition to the traditional SLAM formulation, we also add latent parameters $W = \{w_j\}$ with $j \in 1, \dots, N$  The joint probability of all variables and measurements are given by
 \begin{equation}
@@ -26,12 +36,3 @@ $w_k$ is the likelihood that the measurement comes from static landmark. In our 
 
 
 
-\begin{figure}[h]
-\begin{center}
-%\framebox[4.0in]{$\;$}
-%\fbox{\rule[-.5cm]{0cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
- \includegraphics[width=0.5\linewidth]{fig/model} 
-\end{center}
-\caption{Graphical Model Formulation}
-\label{fig:model}
-\end{figure}
