add bib and delete unnecessary parts

--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -1,11 +1,11 @@
 \begin{abstract}
-Recent development in human-robot interaction brings about higher requirements
+Recent developments in human-robot interaction bring about higher requirements
 for robot navigation. Existing Simultaneous Localization and Mapping (SLAM)
-approaches have become unsuited for navigation in dynamic, complex
-environments because of either assumptions about static environments or
+algorithms have become unsuited for navigation in complex dynamic
+environments due to presumptions of static environments or exceeding
 computational limitations. In this paper we propose a new graph SLAM framework
 exploring incremental EM algorithms to maintain a reference frame while
-establishing the estimation of robot trajectory and the map in real-time. We
+establishing the estimations of robot trajectory and the map in real-time. We
 plan to evaluate the performance of existing robust SLAM algorithms as baselines,
 and validate the improvement of our new framework against datasets of dynamic
 environments with moving objects.
