--- a/proposal/cs242_slam.bib
+++ b/proposal/cs242_slam.bib
@@ -26,7 +26,6 @@
   year =         2008,
 }
 
-
 @inproceedings{rogers2010slam,
   title={Slam with expectation maximization for moveable object tracking},
   author={Rogers, John G and Trevor, Alexander JB and Nieto-Granda, Carlos and Christensen, Henrik Iskov},
@@ -36,14 +35,13 @@
   organization={IEEE}
 }
 
-
-
-@inproceedings{sunderhauf2012switchable,
-  title={Switchable constraints for robust pose graph slam},
-  author={Sunderhauf, N and Protzel, Peter},
-  booktitle={Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ International Conference on},
-  pages={1879--1884},
-  year={2012},
+@inproceedings{wang2003online,
+  title={Online simultaneous localization and mapping with detection and tracking of moving objects: Theory and results from a ground vehicle in crowded urban areas},
+  author={Wang, Chieh-Chih and Thorpe, Charles and Thrun, Sebastian},
+  booktitle={Robotics and Automation, 2003. Proceedings. ICRA'03. IEEE International Conference on},
+  volume={1},
+  pages={842--849},
+  year={2003},
   organization={IEEE}
 }
 
@@ -55,3 +53,12 @@
   year={2011},
   organization={IEEE}
 }
+
+@InProceedings{haehnel03iros,
+  author    = {H{\"a}hnel, D. and Burgard, W. and Fox, D. and Thrun, S.},
+  title     = {A highly efficient {FastSLAM} algorithm for generating cyclic maps of large-scale environments from raw laser range measurements},
+  booktitle = {Proc.~of the IEEE/RSJ International Conference on 
+               Intelligent Robots and Systems (IROS)},
+  year      = {2003}
+} 
+
