--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -76,7 +76,7 @@ Providence, RI 02912 \\
 \input{timeline}
 
 \bibliographystyle{plain}
-\bibliography{cs242_slam}
+\bibliography{cs242_slam}{}
 %\subsection{Figures}
 %\begin{figure}[h]
 %\begin{center}
