--- a/proposal/cs242_slam.bib
+++ b/proposal/cs242_slam.bib
@@ -62,3 +62,9 @@
   year      = {2003}
 } 
 
+@InProceedings{Switchable12,
+  author    = {Niko Sunderhauf and Peter Protzel},
+  title     = {Switchable Constraints for Robust Pose Graph SLAM},
+  booktitle = {Proc. of IEEE Conf. on Intelligent Robots and Systems (IROS), 2012},
+  year      = {2012}
+} 
