--- a/proposal/model.tex
+++ b/proposal/model.tex
@@ -5,7 +5,7 @@
 %\fbox{\rule[-.5cm]{0cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
  \includegraphics[width=0.25\textwidth]{fig/model} 
 \end{center}
-\caption{Graphical Model Formulation}
+\caption{Graphical Model Formulation. Dark nodes are observed.}
 \label{fig:model}
 \end{wrapfigure}
 
