--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -71,6 +71,7 @@ Providence, RI 02912 \\
 \input{introduction}
 \input{relatedwork}
 \input{model}
+\input{algorithm}
 \input{experiments}
 \input{discussion}
 \input{timeline}
