--- a/proposal/cs242_slam.bib
+++ b/proposal/cs242_slam.bib
@@ -68,3 +68,13 @@
   booktitle = {Proc. of IEEE Conf. on Intelligent Robots and Systems (IROS), 2012},
   year      = {2012}
 } 
+
+
+@incollection{neal1998EM,
+  title={A view of the EM algorithm that justifies incremental, sparse, and other variants},
+  author={Neal, Radford M and Hinton, Geoffrey E},
+  booktitle={Learning in graphical models},
+  pages={355--368},
+  year={1998},
+  publisher={Springer}
+}
