--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -75,6 +75,7 @@ Providence, RI 02912 \\
 \input{experiments}
 \input{discussion}
 \input{timeline}
+\input{appendix}
 
 \bibliographystyle{plain}
 \bibliography{cs242_slam}{}
