rough draft experiments

--- a/proposal/experiments.tex
+++ b/proposal/experiments.tex
@@ -44,3 +44,24 @@ plausible estimate of robot trjectory and the map, however robust SLAM methods
 which assume stationary landmarks will average over a sum of different
 reference frames and lead to wrong conclusions.
 
+%%%%%
+To benchmark the robustness of the proposed approach and to show its correctness and feasibility, we used the Victoria Park dataset that has been used in a number of publications before. The dataset consists of pose graphs in 2D and contain several thousand poses and landmark constraints. We corrupted the data by setting landmark ``249" (circled in red) in a constant northward movement, where its eventual position is roughly 7 meters north of its original location. We chose landmark ``249" due to the relatively large amount of observations on this particular landmark in the dataset. We expect the more observations there are on a landmark, the greater its movement would corrupt the final optimization results and the more possible that existing robust SLAM methods would fail. \\
+
+%% TODO: Some explanations about DCS and SLAM w/ EM
+
+%% TODO: Add figures
+\textbf{TODO:} figures (7-meter movement, 14-meter movement, from the presentation) \\
+
+
+[Fig. ...] shows the results for DCS, simple EM, and our approach. As expected, current state of the art frameworks are not able to cope with the outlier constraints and converge towards defective solutions. This is particularly illustrated in the lower left figure of [Fig. ...], which shows the results of simple EM algorithm with weights only added to the landmarks. Even g2o with robust DCS cost kernel is not able to converge correctly, where we can see pose graph around the moving landmark is clearly distorted. Our robust back-end however, is able to converge to a correct solution in a few iterations. The outlier is correctly deactivated by driving their associated weights $w_{j_k}$ and $v_k$ close to zeros. 
+
+
+
+%% TODO: figures showing the learning objective 
+\textbf{TODO:} ``To help verify that your statistical learning algorithm is working properly, at least one plot showing the learning objective (joint log-probability for an MCMC method, a log-likelihood bound for a variational method, etc.) as a function of the number of learning iterations."  
+
+(Final or initial $\chi^2$ errors against number of iterations)  \\
+
+
+
+
